# highlighting-colors

./: README  README.markdown  Xresources.html  highlighting-color.cabal  highlighting-colors.cabal  index.html  params.json
src/: Main.hs
src/Text/Highlighting/: Color.hs
src/Text/Highlighting/Color/: Content.hs  QQ.hs  Template.hs
